# CAB432

assignment-1/interwhat/frontend/: package-lock.json  package.json
assignment-1/interwhat/frontend/src/: App.js
assignment-1/interwhat/server/: Dockerfile  api.js  app.js  package-lock.json  package.json
assignment-1/interwhat/server/public/: asset-manifest.json  index.html  precache-manifest.ae5d6cadebc6be6e1d48736f5bbd85d8.js  service-worker.js
assignment-1/interwhat/server/routes/: interwhat.js
assignment-2/: .dockerignore  .gitignore  Dockerfile  README.md  wrapper.sh
assignment-2/.aws/: credentials
assignment-2/clarity/: analysis.py  main.py  pyproject.toml  requirements.txt  testing.py
assignment-2/client/: package-lock.json  package.json
assignment-2/client/src/: App.js
assignment-2/server/: app.js  package-lock.json  package.json
assignment-2/server/public/: asset-manifest.json  index.html  precache-manifest.1f7af4a59614d80ebf072d7ebde13411.js  precache-manifest.2f4513db763996decae118904c654c1f.js  precache-manifest.3084c17d27c9f843ba054a7d8e6a0014.js  precache-manifest.5256bbdfe88c726afe4963cb87f55555.js  precache-manifest.759760269b3aab8bf92e800aa7c8c6ec.js  precache-manifest.83018ba6dfbde25cba47b405d9edf4f6.js  precache-manifest.b17ff5a805b91f4d26a3ae965cc879f1.js  precache-manifest.d54ff543bf9f9883dc08b14e2b2a55a1.js  precache-manifest.e38f0df8b854257c868d4f3cec55ee2a.js  precache-manifest.f0158e5621eb21a300ac6b51a0d59d5f.js  service-worker.js
assignment-2/server/routes/: clarity.js  index.js
(+47 files in other folders)
